# farts.rs

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml
examples/: simple.rs
src/: lib.rs
test/: basic.rs
tests/: basic.rs
