[package]
name = "farts"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lexa-diky/farts.rs"
readme = "README.md"
documentation = "https://github.com/lexa-diky/farts.rs"
homepage = "https://github.com/lexa-diky/farts.rs"
description = "Port of fart.js library in Rust"
keywords = ["sound", "fart", "multimedia", "audio"]
categories = ["multimedia"]

[dependencies]
rodio = "0.18.0"
rust-embed = "8.3.0"
